--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,21 +1,118 @@
-html {
-    background-color: #f1f5f9;
-    font-family: sans-serif;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:wght@200&display=swap');
+:root {
+  font-family:  'Poppins', Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color: white;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+html, body {
+  text-align: left;
+  background: #111;
+  color: white;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #2c2c2c;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6d6d6d;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a5a5a5;
+}
+
+* {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+
+/* everything text */
+h1, h2, h3, h4, h5, h6, p, ul, ol {
+  padding: 1.5rem;
+}
+
+/* prevent the weird double padding... i should probably start learning SASS... */
+/* doing this the other way would also involve this kinda bullshit */
+h1:not(:first-child),
+h2:not(:first-child),
+h3:not(:first-child),
+h4:not(:first-child),
+h5:not(:first-child),
+h6:not(:first-child),
+p:not(:first-child),
+ul:not(:first-child),
+ol:not(:first-child) {
+  padding-top: 0;
+}
+
+/* header leading */
+h1, h2, h3, h4, h5, h6 {
+  line-height: 2.5rem;
+}
+
+ul, ol {
+  list-style-position: inside;
+}
+
+/* body {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 80ch;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
+} */
   
-  body {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 80ch;
-    padding: 1rem;
-    line-height: 1.5;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  h1 {
-    margin: 1rem 0;
-    font-size: 2.5rem;
-  }
+/* * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+} */
+
+blockquote {
+  background-color: #0000005d;
+  margin: 1rem;
+}
+
+a {
+  color: rgb(177, 191, 235);
+  text-decoration: none;
+}
+
+.shadow {
+  box-shadow: 2px 2px 6px #00000065;  
+}
+
+.text-shadow {
+  text-shadow: 2px 2px 6px #00000065;
+}
+
+/* for markdown posts */
+p:has(img) {
+  text-align:center;
+}
+
+img {
+  max-width: 100%;
+}
