--- a/src/components/BlogThumbnail.astro
+++ b/src/components/BlogThumbnail.astro
@@ -9,7 +9,7 @@ const {
 ---
 
 <a href={url} class="text-shadow">
-    <div>
+    <div class="shadow">
         <h1>{title}</h1>
         <p>{description}</p>
     </div>
@@ -27,5 +27,10 @@ const {
         color: white;
         padding: 1rem;
         margin: 1rem;
+        transition: filter 0.2s ease;
+    }
+
+    div:hover {
+        filter: brightness(120%)
     }
 </style>
