--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
 ---
-<BaseLayout pageTitle="home" backgroundStyle="url(https://vlusky.github.io/assets/background-glower-thin.ced40d7e.png)">
+<BaseLayout pageTitle="home" backgroundStyle="url(https://cdn.discordapp.com/attachments/1027882514548789279/1079729679981891624/background-glower-thin.png)">
 
   <svg
     id="logo"
@@ -38,7 +38,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
       />
     </g>
   </svg>
-  <span id="subtext">Animator by day, Anituber by night</span>
+  <span id="subtext" class="text-shadow">Animator by day, Anituber by night</span>
 </BaseLayout>
 
 <style>
@@ -56,7 +56,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
   #logo {
     fill: white;
     width: 30rem;
-    max-width: 80%;
+    max-width: calc(100% - 1rem);
     
     stroke-width: 5px;
     stroke-dasharray: 1000px;
@@ -67,6 +67,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
   }
 
   #subtext {
-    font-size: 1.25rem
+    font-size: min(1.25rem, 4vw);
+    text-align: center;
   }
 </style>
