--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -33,14 +33,12 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
 <style>
   .tags {
     display: flex; 
-    flex-wrap: wrap; 
-    margin: 0 1rem;
-    margin-bottom: 2rem;
-    width: 100%;
+    flex-wrap: wrap;
+    margin-left: 1rem;
+    width: calc(100% - 2rem);
   }
 
   .tag {
-    margin: 0.25em;
     border: solid 2px #ffffff6b;
     padding: .5em 1em;
     font-size: 0.9rem;
@@ -49,6 +47,7 @@ const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
   }
 
   .tags > a > div {
+    margin: 0.2rem;
     transition: all 0.2s ease;
   }
 
